[gd_scene load_steps=15 format=3 uid="uid://burlywq8ry0kp"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_ilqt1"]
[ext_resource type="PackedScene" uid="uid://bmkxrdnpbve4d" path="res://scenes/ball.tscn" id="1_rj6ou"]
[ext_resource type="PackedScene" uid="uid://bkjq15jvc33kc" path="res://scenes/wall.tscn" id="2_n3omf"]
[ext_resource type="PackedScene" uid="uid://cria07a5tc6m6" path="res://scenes/paddle.tscn" id="3_c161j"]
[ext_resource type="PackedScene" uid="uid://bkbknjcip6p6d" path="res://scenes/level1_blocks.tscn" id="3_i707a"]
[ext_resource type="AudioStream" uid="uid://djt356l48msdq" path="res://scenes/MusicSyncSet.tres" id="6_f4tgh"]
[ext_resource type="Script" path="res://scenes/main_sync_music.gd" id="7_2036g"]
[ext_resource type="AudioStream" uid="uid://kq8ya0i45nei" path="res://assets/musics/Buster1-Failed.ogg" id="11_8cgkg"]
[ext_resource type="AudioStream" uid="uid://y4kbcb0eumqh" path="res://assets/musics/Buster1-End.ogg" id="12_86o5q"]
[ext_resource type="Script" path="res://scenes/main_abandoned_music.gd" id="18_gm7iy"]
[ext_resource type="AudioStream" uid="uid://bt5mx205ptd3l" path="res://assets/musics/Collide1.wav" id="20_cl184"]
[ext_resource type="AudioStream" uid="uid://b7ox02qtebt02" path="res://assets/musics/Collide2.wav" id="20_k7rfs"]
[ext_resource type="AudioStream" uid="uid://1qr0d5n41r38" path="res://assets/musics/Collide2b.wav" id="24_7xfsr"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_vrqwy"]
clip_count = 3
clip_0/name = &"main"
clip_0/stream = ExtResource("6_f4tgh")
clip_0/auto_advance = 0
clip_1/name = &"failed"
clip_1/stream = ExtResource("11_8cgkg")
clip_1/auto_advance = 1
clip_1/next_clip = 0
clip_2/name = &"end"
clip_2/stream = ExtResource("12_86o5q")
clip_2/auto_advance = 0
_transitions = {
Vector2i(0, 1): {
"fade_beats": 1,
"fade_mode": 2,
"from_time": 1,
"to_time": 1
},
Vector2i(0, 2): {
"fade_beats": 1,
"fade_mode": 2,
"from_time": 1,
"to_time": 1
}
}

[node name="Main" type="Node"]
script = ExtResource("1_ilqt1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0064121, 0.0780598, 0.130739, 1)

[node name="Wall" parent="." instance=ExtResource("2_n3omf")]

[node name="Level1_Blocks" parent="." instance=ExtResource("3_i707a")]

[node name="Paddle" parent="." instance=ExtResource("3_c161j")]
position = Vector2(389, 1090)

[node name="Ball" parent="." instance=ExtResource("1_rj6ou")]
position = Vector2(389, 1058)

[node name="MainSyncMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f4tgh")
script = ExtResource("7_2036g")

[node name="MainFailedMusic" type="AudioStreamPlayer" parent="MainSyncMusic"]
stream = ExtResource("11_8cgkg")

[node name="MainEndMusic" type="AudioStreamPlayer" parent="MainSyncMusic"]
stream = ExtResource("12_86o5q")

[node name="MainAbandonedMusic" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_vrqwy")
script = ExtResource("18_gm7iy")

[node name="PaddleHitSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_cl184")

[node name="BlockHitSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_k7rfs")

[node name="WallHitSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_7xfsr")

[connection signal="block_hit" from="Ball" to="." method="_on_ball_block_hit"]
[connection signal="missed" from="Ball" to="." method="_on_ball_missed"]
[connection signal="paddle_hit" from="Ball" to="." method="_on_ball_paddle_hit"]
[connection signal="wall_hit" from="Ball" to="." method="_on_ball_wall_hit"]
[connection signal="finished" from="MainSyncMusic/MainFailedMusic" to="." method="_on_main_failed_music_finished"]
[connection signal="finished" from="MainSyncMusic/MainEndMusic" to="." method="_on_main_end_music_finished"]
